--- a/css/style.css
+++ b/css/style.css
@@ -471,12 +471,17 @@ body {
 
 .top-navigation {
   background-color: #fff;
+  display: block;
+  height: 4.5rem;
+  position: fixed;
+  z-index: 9999;
+  width: 100%;
 }
 
 
 .top-navigation > .content {
   width: 970px;
-  height: 70px;
+  height: 2.375rem;
   margin: 0 auto;
 }
 
@@ -489,7 +494,7 @@ body {
 .top-navigation .links {
   float: right;
   font-family: 'Roboto', sans-serif; 
-  font-size: 16px; 
+  font-size: 1.04rem; 
   color: #838994;
   margin-top: 25px;
   -webkit-font-smoothing: antialiased;
@@ -525,10 +530,11 @@ body {
   background: #fe5d26 url('../img/first-background.jpg') no-repeat;
   background-size: cover;
   background-position: center;
-  height: 670px;
+  height: 45.938rem;
   width: 100%;
   margin: auto;
 }
+
 
  h1,
  h3 {
@@ -536,12 +542,51 @@ body {
   font-family: Roboto, sans-serif;
   text-align: center;
   font-weight: 300;
-  font-size: 3rem;
+  font-size: 3.125rem;
 }
+
 
 h3 {
   font-weight: 300;
+  font-size: 1.563rem;
+  margin-top: -1rem;
 }
+
+
+.introduction .content {
+  padding-top: 14.725rem;
+}
+
+
+button {
+  display: block;
+  color: #fff;
+  background-color: #f15a29;
+  border-color: #f15a29;
+  text-shadow: none;
+  border-style: none;
+  border-radius: 4px;
+  padding: 1rem 1.5rem;
+  font-size: 1.125rem;
+  width: 9.688rem;
+  margin-left: 10rem;
+  text-align: center;
+  margin: auto;
+  -webkit-transition-duration: 200ms;
+}
+
+
+button:hover {
+  background-color: #ce3300;
+}
+
+
+.group:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 
 /*.navigation {
   position: fixed;
