--- a/css/style.css
+++ b/css/style.css
@@ -491,7 +491,7 @@ body {
 .content {
   padding: 0px 15px;
   box-sizing: border-box;
-  width: 970px;
+  width: 100%;
   height: 2.375rem;
   margin: 0 auto;
 }
@@ -502,6 +502,7 @@ body {
   font-size: 1.04rem; 
   color: #838994;
   margin-top: 25px;
+  margin-right: 2rem;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -527,6 +528,7 @@ body {
 
 .logo {
   height: 70px;
+  margin-left: 2.2rem;
  
 }
 
@@ -543,8 +545,8 @@ body {
 }
 
 
- h1,
- h3 {
+ .introduction h1,
+ .introduction h3 {
   color:#FFF;
   text-align: center;
   font-weight: 300;
@@ -553,7 +555,7 @@ body {
 }
 
 
-h3 {
+.introduction h3 {
   font-weight: 300;
   font-size: 1.563rem;
   margin-top: -1rem;
@@ -589,6 +591,65 @@ button:hover {
 }
 
 
+/* Cases ==========================*/
+.cases {
+  height: 50rem;
+}
+
+
+.cases h2 {
+  font-family: Roboto, sans-serif;
+  font-weight: 300;
+  font-size: 2.750rem;
+  text-align: center;
+  margin-top: 8rem;
+  line-height: 1;
+}
+
+
+.devices > li > img {
+  width: 8.5rem;
+  height: 8rem;
+}
+
+
+.cases .devices {
+  margin: auto;
+  height: 150px;
+  width: 90%;
+  min-width: 35rem;
+  max-width: 50rem;
+  text-align: center;
+  display: -webkit-flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+
+.cases .devices > li {
+  list-style: none;
+  width: 33.3333%;
+  min-width: 10rem;
+  max-width: 20rem;
+  /*float: left;*/
+  margin-top: 20px;
+}
+
+.devices li .caption > h3 {
+  font-weight: 400;
+  font-size: 1.563rem;
+  margin: 2.5rem 0 1.875rem;
+  text-align: center;
+}
+
+
+
+
+
+
+
+/*Clearfix for floats ==========================*/
+
 .group:after {
   content: "";
   display: table;
@@ -596,41 +657,7 @@ button:hover {
 }
 
 
-/*.navigation {
-  position: fixed;
-  height: 4.375rem;
-  width: 60rem;
-  background-color: white;
 
-}
-
-
-.navigation-menu {
-  display: block;
-  text-align: right;
-  margin: -30px 100px 10px 200px;
-  white-space: nowrap;
-  
-}
-
-
-.navigation-menu > li {
-  display: inline-block;
-  margin: 5px 10px;
-  list-style: none;
-  color: slategrey;
-  margin: 0 15px;
-} 
-
-
-.filler > img{
-  height: 1000px;
-  width: 100%;
-  margin: auto;
-}
-
-
-*/
 
 
 
